--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,12 +30,15 @@ body {
 }
 button {
   font-size: 30px;
+  color: black;
   text-decoration: none;
+  -webkit-tap-highlight-color: transparent;
   border: none;
 }
 
 button a {
-  text-decoration: none;
+  color: inherit !important;
+  text-decoration: none !important; 
 }
 i {
   margin-left: 15px;
