--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,8 +30,8 @@ body {
 }
 button {
   font-size: 30px;
-  color: black;
-  text-decoration: none;
+  color: black !important;
+  text-decoration: none !important;
   -webkit-tap-highlight-color: transparent;
   border: none;
 }
